Changed jump function to flip player and enemy when they change sides, and made player attacks effect enemy health when in range. Todo: create AI for enemy, and fix minor bug with flip animation where both characters flip multiple times

--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ img[id*="Icon"] {
 }
 img[id*="HealthIndicator"]{
     width: 77%;
+    height: 40;
     top: -1vw;
     position: relative;
     margin-left: -0.6vw;
